# poromarker

./: .gitignore  CMakeLists.txt  README.md  poromarker.cpp  Договоренности внутри команд.md  Договоренности внутри команды.md  Пользовательские этапы.canvas  Примерный пайплайн проекта.canvas  Результаты сбора информации и выделенные задачи.md
docs/: lib_integration.md  Пользовательские этапы.canvas
